Improve test coverage to 100%